src/test/resources/valid/assign.c
int foo(int x, int y) {
  short b = x;
  b &= y;
  return b;
}
