src/test/resources/parse-error/variable-redefinition.c
int f(int x) {
  int y;
  int y;
}
